--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -11,7 +11,7 @@
   "loading": "Loading...",
   "maxTemp": "Max temperature",
   "minTemp": "Min temperature",
-  "now": "Temp now",
+  "now": "Temperature now",
   "day": "Today",
   "5days": "5 days",
   "deleteMessage": "Confirm delete",
