--- a/src/langs/uk.json
+++ b/src/langs/uk.json
@@ -11,7 +11,7 @@
   "loading": "Завантаження...",
   "maxTemp": "Макс температура",
   "minTemp": "Мін температура",
-  "now": "Темп зараз",
+  "now": "Температура зараз",
   "day": "Сьогодні",
   "5days": "5 днів",
   "deleteMessage": "Підтвердити видалення",
